--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-boto3==1.4.0
+numpy==1.11.1
 requests==2.10.0
-beautifulsoup4==4.5.1
+Flask==0.11.1
+matplotlib==2.0.0b4
+pandas==0.19.0rc1
+pymongo==3.3.0
+scikit_learn==0.18rc2
